--- a/public/admin.html
+++ b/public/admin.html
@@ -68,8 +68,9 @@
           <table id="users-table">
             <thead>
               <tr>
-                <th>IP Address</th>
                 <th>Discord User</th>
+                <th>IP Address</th>
+                <th>Serial Number</th>
                 <th>Last Seen</th>
                 <th>Actions</th>
               </tr>
@@ -135,6 +136,7 @@
             <thead>
               <tr>
                 <th>Username</th>
+                <th>Serial Number</th>
                 <th>Status</th>
                 <th>IP Addresses</th>
                 <th>Last Seen</th>
