--- a/public/admin.html
+++ b/public/admin.html
@@ -69,8 +69,8 @@
             <thead>
               <tr>
                 <th>Discord User</th>
-                <th>IP Address</th>
                 <th>Serial Number</th>
+                <th>IP Address</th>
                 <th>Last Seen</th>
                 <th>Actions</th>
               </tr>
@@ -137,8 +137,8 @@
               <tr>
                 <th>Username</th>
                 <th>Serial Number</th>
-                <th>Status</th>
                 <th>IP Addresses</th>
+                <th>Status</th>
                 <th>Last Seen</th>
                 <th>Actions</th>
               </tr>
@@ -151,7 +151,7 @@
 
     <div class="card">
       <div class="card-header" onclick="toggleSection('banned-ips')">
-        <h2>Banned IPs</h2>
+        <h2>Banned Users</h2>
         <span class="toggle-arrow" id="toggle-banned-ips">▼</span>
       </div>
       <div class="collapsible-content" id="content-banned-ips">
@@ -159,6 +159,8 @@
           <table id="banned-table">
             <thead>
               <tr>
+                <th>Username</th>
+                <th>Serial Number</th>
                 <th>IP Address</th>
                 <th>Actions</th>
               </tr>
